--- a/kooplexhub/kooplex/hub/templates/app/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-partial.html
@@ -25,16 +25,16 @@
             {% if not publicvar %}
         {% include 'app/notebooks-repo-pull-really.html' %}
 
-        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#repo-pull-{{ item.name }}">revert</button>
+        <button type="button" class="btn btn-default" data-toggle="modal" data-target="#repo-pull-{{ item.name }}">Revert</button>
 
      <!-- <a href="{% url 'notebooks-pull-confirm' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
         <span class="button pull">pull</span></a> -->
         
     <a href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
-        <span class="button start">start</span></a>
+        <span class="button start">Start</span></a>
 
     <a href="{% url 'notebooks-commit' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}" target="_blank">
-        <span class="button commit">commit</span></a>
+        <span class="button commit">Commit</span></a>
     {% endif %}
     {% comment %}
     {% endif %}
@@ -49,7 +49,7 @@
 
     {%  if publicvar %}
         {% if item.forkable %}
-            | fork this <a href="{% url 'project-fork' %}?itemid={{ item.id }}" target="_blank">project</a>
+            <a href="{% url 'project-fork' %}?itemid={{ item.id }}" target="_blank"><span class="button commit">Fork it</span> </a>
         {% else %}
             | it has been forked
         {% endif %}
@@ -69,7 +69,7 @@
     </strong>
             {% if not publicvar %}
     {% include 'app/notebooks-change-image.html' %}
-    <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#change-image-{{ item.name }}">change</button>
+    <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#change-image-{{ item.name  }}">Change</button>
     {% include 'app/notebooks-delete-project.html' %}
     <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#delete-project-{{ item.name }}">Delete project</button>
     {% endif %}
