--- a/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-change-image.html
@@ -10,15 +10,13 @@
               <button type="button" class="close" data-dismiss="modal">&times;</button>
                  <h4 class="modal-title">Choose an image for the project?</h4>
               </div>
-              <div>
+              <div  class="modal-body">
               Current image: <strong> 
               {% for var in item.variables %}
           {% if var.key == 'container_image' %}
             {{ var.value }}
         {% endif %}
         {% endfor %} </strong>
-        </div>
-              <div class="form-group">
                         <select id="project.images" name="project.image">
                             {% for image in notebook_images %}
                             <option value="{{ image }}">{{ image }}</option>
