--- a/kooplexhub/kooplex/hub/templates/app/password-form.html
+++ b/kooplexhub/kooplex/hub/templates/app/password-form.html
@@ -36,6 +36,7 @@
                     </div>
                 </div>
                 {% if errors %}
+                    {{ errors }}
                 <p class="validation-summary-errors">Please enter a correct user name and password.</p>
                 {% endif %}
             </form>
