--- a/kooplexhub/kooplex/hub/templates/app/project-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/project-partial.html
@@ -31,8 +31,11 @@
      <!-- <a href="{% url 'notebooks-pull-confirm' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
         <span class="button pull">pull</span></a> -->
         
-    <a href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
+    <!--<a href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
         <span class="button start">Start</span></a>
+    -->
+                <a role="button" href="{% url 'notebooks-open' %}?project_id={{ item.id }}&project_owner={{ item.owner.username }}&project_name={{ item.name }}&repo={{ item.path_with_namespace }}{% if 'forked_from_project' in item %}&is_forked=True&project_id={{ item.id }}&target_id={{ item.forked_from_project.id }}{% else %}&is_forked=False{% endif %}">
+                    <button role="button" type="button" class="btn btn-default" >Start</button></a>
 
     <a href="{% url 'notebooks-commit' %}?project_owner={{ item.owner.username }}&project_name={{ item.name }}&notebook_path_dir={{ item.notebook_path }}&is_forked={{ item.is_forked }}" target="_blank">
         <span class="button commit">Commit</span></a>
@@ -85,6 +88,7 @@
             {% if not publicvar %}
     {% include 'app/notebooks-change-image.html' %}
     <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#change-image-{{ item.name  }}">Change</button>
+
     {% include 'app/notebooks-delete-project.html' %}
     <button type="button" class="btn btn-default" data-toggle="modal"  data-target="#delete-project-{{ item.name }}">Delete project</button>
     {% endif %}
