--- a/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks-new-partial.html
@@ -1,10 +1,11 @@
 ﻿<!-- Modal -->
+
 <div id="project-new" class="modal fade" role="dialog">
   <div class="modal-dialog">
 
     <!-- Modal content-->
     <div class="modal-content">
-        <form class="form-horizontal" action="{% url 'project-new' %}" method="post">
+        <form id="newproject" class="form-horizontal" action="{% url 'project-new' %}" method="post">
             {% csrf_token %}
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -13,10 +14,13 @@
               <div class="modal-body">
                 <p>Enter a new name for the project.</p>
                 <fieldset>
-                    <div class="form-group">
+                    <div class="form-group has-error">
                         <label for="project.name">Project name:</label>
                         <input type="text" class="form-control" id="project.name" name="project.name" placeholder="Enter Name">
                     </div>
+                     {% if errors %}
+                        <p class="validation-summary-errors">Please use only lower case letters and hyphens</p>
+                    {% endif %}
                     <div class="form-group">
                         <label for="project.image">Choose an image for your project</label><br>
                         <select id="project.images" name="project.image">
@@ -42,6 +46,8 @@
                 <button type="submit"class="btn btn-default" title="OK"> Create</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
               </div>
+
+    
         </form>
     </div>
 
