--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -14,9 +14,11 @@
 
   <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #dda7a7;text-align: center;">
   <img
-    src="https://s-media-cache-ak0.pinimg.com/736x/8e/e8/c8/8ee8c89916b2f9d9348bdbd4dea9240a.jpg" style="height: 80px;padding-top:10px;"
+    src="https://s-media-cache-ak0.pinimg.com/736x/8e/e8/c8/8ee8c89916b2f9d9348bdbd4dea9240a.jpg" style="height: 70px;padding-top: 10px 0px 10px;"
     alt="Worksheets" >
+            </div>
       <div class="caption">
         <h3> Worksheets</h3>
         <p>Run pre-compiled worksheets to hide program code and
@@ -32,7 +34,9 @@
 
       <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
-      <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 80px;padding-top:10px;" alt="Jupyter Notebook">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: blanchedalmond;text-align: center;">
+      <img src="https://jupyter.readthedocs.io/en/latest/_static/_images/jupyter.svg" style="height: 60px;padding-top: 10px 0px 10px;" alt="Jupyter Notebook">
+            </div>
       <div class="caption">
         <h3> Jupyter notebooks</h3>
         <p>Run existing Jupyter notebooks from existing projects to process your data
@@ -45,7 +49,9 @@
 
         <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
-      <img src="https://about.gitlab.com/images/logo.png" style="height: 80px;padding-top:10px;" alt="GitLab">
+<div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: darkseagreen;text-align: center;">
+      <img src="https://about.gitlab.com/images/logo.png" style="height: 80px;padding:10px;" alt="GitLab">
+    </div>
       <div class="caption">
         <h3> Gitlab</h3>
         <p>Gitlab szoveg.</p>
@@ -58,7 +64,9 @@
 
         <div class="col-md-3 col-sm-4 col-xs-6">
     <div class="thumbnail">
-      <img src="https://doc.owncloud.org/server/8.0/admin_manual/_static/img/logo_owncloud.svg" style="height: 80px;padding-top:10px;background-color: #1d2d44;" alt="OwnCLoud Fileserver">
+        <div  style="height: 90px; padding: 10px 0px 10px 0px;background-color: #1d2d44;text-align: center;">
+      <img src="https://doc.owncloud.org/server/8.0/admin_manual/_static/img/logo_owncloud.svg" style="height: 70px;padding-top: 10px 0px 10px;background-color: #1d2d44;" alt="OwnCLoud Fileserver">
+            </div>
       <div class="caption">
         <h3> Owncloud</h3>
         <p>Manage easily your data files through the owncloud... (just as easy as in Dropbox! :) )</p>
