--- a/kooplexhub/kooplex/hub/templates/app/index.html
+++ b/kooplexhub/kooplex/hub/templates/app/index.html
@@ -39,10 +39,13 @@
             </div>
       <div class="caption">
         <h3> Jupyter notebooks</h3>
-        <p>Run existing Jupyter notebooks from existing projects to process your data
-            or author your own notebooks and share with others.</p>
+        
+        <p>Run existing or create Jupyter notebooks from existing projects to process your data
+            or author your own projects, notebooks and share with others.</p>
+            {% if user.is_authenticated %}
         <p><a href="{% url 'notebooks' %}" class="btn btn-primary" role="button"><span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> Browse notebooks</a>
             </p>
+            {% endif %}
       </div>
     </div>
   </div>
@@ -54,10 +57,12 @@
     </div>
       <div class="caption">
         <h3> Gitlab</h3>
-        <p>Gitlab szoveg.</p>
+        <p>Manage your project, add members to it, file issues.</p>
+        {% if user.is_authenticated %}
         <p><a href="/gitlab" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Gitlab</a>
             </p>
+            {% endif %}
       </div>
     </div>
   </div>
@@ -70,9 +75,11 @@
       <div class="caption">
         <h3> Owncloud</h3>
         <p>Manage easily your data files through the owncloud... (just as easy as in Dropbox! :) )</p>
+        {% if user.is_authenticated %}
         <p><a href="/owncloud" target="_blank" class="btn btn-primary" role="button">
         <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span> to Owncloud</a>
             </p>
+            {% endif %}
       </div>
     </div>
   </div>
